fix(layout): made better looking layout spacing

--- a/src/components/shared/PageSection.module.css
+++ b/src/components/shared/PageSection.module.css
@@ -3,4 +3,9 @@ section {
   display: flex;
   flex-direction: column;
   gap: rem(48px);
+
+  @media (max-width: $mantine-breakpoint-sm) {
+    gap: rem(24px)
+  }
+
 }
